--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@tabler/icons-react": "^3.20.0",
     "dayjs": "^1.11.13",
     "electron-squirrel-startup": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
